src/kudu/server/rpc_server.h
@@ -39,6 +39,7 @@ struct RpcServerOptions {
   RpcServerOptions();
 
   std::string rpc_bind_addresses;
+  std::string rpc_advertised_addresses;
   uint32_t num_acceptors_per_address;
   uint32_t num_service_threads;
   uint16_t default_port;
@@ -50,12 +51,12 @@ class RpcServer {
   explicit RpcServer(RpcServerOptions opts);
   ~RpcServer();
 
-  Status Init(const std::shared_ptr<rpc::Messenger>& messenger);
+  Status Init(const std::shared_ptr<rpc::Messenger>& messenger) WARN_UNUSED_RESULT;
   // Services need to be registered after Init'ing, but before Start'ing.
   // The service's ownership will be given to a ServicePool.
-  Status RegisterService(gscoped_ptr<rpc::ServiceIf> service);
-  Status Bind();
-  Status Start();
+  Status RegisterService(gscoped_ptr<rpc::ServiceIf> service) WARN_UNUSED_RESULT;
+  Status Bind() WARN_UNUSED_RESULT;
+  Status Start() WARN_UNUSED_RESULT;
   void Shutdown();
 
   std::string ToString() const;
@@ -63,6 +64,10 @@ class RpcServer {
   // Return the addresses that this server has successfully
   // bound to. Requires that the server has been Start()ed.
   Status GetBoundAddresses(std::vector<Sockaddr>* addresses) const WARN_UNUSED_RESULT;
+
+  // Return the addresses that this server is advertising externally
+  // to the world. Requires that the server has been Start()ed.
+  Status GetAdvertisedAddresses(std::vector<Sockaddr>* addresses) const WARN_UNUSED_RESULT;
 
   const rpc::ServicePool* service_pool(const std::string& service_name) const;
 
@@ -84,6 +89,10 @@ class RpcServer {
 
   // Parsed addresses to bind RPC to. Set by Init()
   std::vector<Sockaddr> rpc_bind_addresses_;
+
+  // Parsed addresses to advertise. Set by Init(). Empty if rpc_bind_addresses_
+  // should be advertised.
+  std::vector<Sockaddr> rpc_advertised_addresses_;
 
   std::vector<std::shared_ptr<rpc::AcceptorPool> > acceptor_pools_;
 
