src/kudu/server/webserver.cc
@@ -210,6 +210,19 @@ Status Webserver::Start() {
   RETURN_NOT_OK(BuildListenSpec(&listening_str));
   options.push_back(listening_str);
 
+  // initialize the advertised addresses
+  if (!opts_.webserver_advertised_addresses.empty()) {
+    RETURN_NOT_OK(ParseAddressList(opts_.webserver_advertised_addresses,
+                                   opts_.port,
+                                   &webserver_advertised_addresses_));
+    for (const Sockaddr& addr : webserver_advertised_addresses_) {
+      if (addr.port() == 0) {
+        return Status::InvalidArgument("advertising an ephemeral webserver port is not supported",
+                                       addr.ToString());
+      }
+    }
+  }
+
   // Num threads
   options.push_back("num_threads");
   options.push_back(std::to_string(opts_.num_worker_threads));
@@ -301,7 +314,18 @@ Status Webserver::GetBoundAddresses(std::vector<Sockaddr>* addrs) const {
   return Status::OK();
 }
 
-int Webserver::LogMessageCallbackStatic(const struct sq_connection* connection,
+Status Webserver::GetAdvertisedAddresses(vector<Sockaddr>* addresses) const {
+  if (!context_) {
+    return Status::IllegalState("Not started");
+  }
+  if (webserver_advertised_addresses_.empty()) {
+    return GetBoundAddresses(addresses);
+  }
+  *addresses = webserver_advertised_addresses_;
+  return Status::OK();
+}
+
+int Webserver::LogMessageCallbackStatic(const struct sq_connection* /*connection*/,
                                         const char* message) {
   if (message != nullptr) {
     // Using the ERROR severity for squeasel messages: as per source code at
