src/kudu/server/webserver-test.cc
@@ -15,6 +15,7 @@
 // specific language governing permissions and limitations
 // under the License.
 
+#include <memory>
 #include <string>
 
 #include <gflags/gflags.h>
@@ -34,6 +35,7 @@
 #include "kudu/util/test_util.h"
 
 using std::string;
+using std::unique_ptr;
 
 DECLARE_int32(webserver_max_post_length_bytes);
 
@@ -65,7 +67,7 @@ class WebserverTest : public KuduTest {
     CHECK_OK(env_->CreateDir(static_dir_));
   }
 
-  virtual void SetUp() OVERRIDE {
+  void SetUp() override {
     KuduTest::SetUp();
 
     WebserverOptions opts;
@@ -91,7 +93,7 @@ class WebserverTest : public KuduTest {
 
   EasyCurl curl_;
   faststring buf_;
-  gscoped_ptr<Webserver> server_;
+  unique_ptr<Webserver> server_;
   Sockaddr addr_;
 
   string static_dir_;
@@ -235,6 +237,98 @@ TEST_F(WebserverTest, TestStaticFiles) {
   ASSERT_EQ("Remote error: HTTP 403", s.ToString());
 }
 
+class WebserverAdvertisedAddressesTest : public KuduTest {
+ public:
+  void SetUp() override {
+    KuduTest::SetUp();
+
+    WebserverOptions opts;
+    opts.port = 0;
+    string iface = use_webserver_interface();
+    int32 port = use_webserver_port();
+    string advertised = use_advertised_addresses();
+    if (!iface.empty()) {
+      opts.bind_interface = iface;
+    }
+    if (port != 0) {
+      opts.port = port;
+    }
+    if (!advertised.empty()) {
+      opts.webserver_advertised_addresses = advertised;
+    }
+    server_.reset(new Webserver(opts));
+
+    ASSERT_OK(server_->Start());
+  }
+
+ protected:
+  // Overridden by subclasses.
+  virtual string use_webserver_interface() const { return ""; }
+  virtual int32 use_webserver_port() const { return 0; }
+  virtual string use_advertised_addresses() const { return ""; }
+
+  void GetAddresses(vector<Sockaddr>* bound_addrs,
+                    vector<Sockaddr>* advertised_addrs) {
+    ASSERT_OK(server_->GetBoundAddresses(bound_addrs));
+    ASSERT_OK(server_->GetAdvertisedAddresses(advertised_addrs));
+  }
+
+  unique_ptr<Webserver> server_;
+};
+
+class AdvertisedOnlyWebserverTest : public WebserverAdvertisedAddressesTest {
+ protected:
+  string use_advertised_addresses() const override { return "1.2.3.4:1234"; }
+};
+
+class BoundOnlyWebserverTest : public WebserverAdvertisedAddressesTest {
+ protected:
+  string use_webserver_interface() const override { return "127.0.0.1"; }
+  int32 use_webserver_port() const override { return 9999; }
+};
+
+class BothBoundAndAdvertisedWebserverTest : public WebserverAdvertisedAddressesTest {
+ protected:
+  string use_advertised_addresses() const override { return "1.2.3.4:1234"; }
+  string use_webserver_interface() const override { return "127.0.0.1"; }
+  int32 use_webserver_port() const override { return 9999; }
+};
+
+TEST_F(AdvertisedOnlyWebserverTest, OnlyAdvertisedAddresses) {
+  vector<Sockaddr> bound_addrs, advertised_addrs;
+  NO_FATALS(GetAddresses(&bound_addrs, &advertised_addrs));
+
+  ASSERT_EQ(1, advertised_addrs.size());
+  ASSERT_EQ(1, bound_addrs.size());
+  ASSERT_EQ("1.2.3.4", advertised_addrs[0].host());
+  ASSERT_EQ(1234, advertised_addrs[0].port());
+  ASSERT_NE(9999, bound_addrs[0].port());
+}
+
+TEST_F(BoundOnlyWebserverTest, OnlyBoundAddresses) {
+  vector<Sockaddr> bound_addrs, advertised_addrs;
+  NO_FATALS(GetAddresses(&bound_addrs, &advertised_addrs));
+
+  ASSERT_EQ(1, advertised_addrs.size());
+  ASSERT_EQ(1, bound_addrs.size());
+  ASSERT_EQ("127.0.0.1", advertised_addrs[0].host());
+  ASSERT_EQ(9999, advertised_addrs[0].port());
+  ASSERT_EQ("127.0.0.1", bound_addrs[0].host());
+  ASSERT_EQ(9999, bound_addrs[0].port());
+}
+
+TEST_F(BothBoundAndAdvertisedWebserverTest, BothBoundAndAdvertisedAddresses) {
+  vector<Sockaddr> bound_addrs, advertised_addrs;
+  NO_FATALS(GetAddresses(&bound_addrs, &advertised_addrs));
+
+  ASSERT_EQ(1, advertised_addrs.size());
+  ASSERT_EQ(1, bound_addrs.size());
+  ASSERT_EQ("1.2.3.4", advertised_addrs[0].host());
+  ASSERT_EQ(1234, advertised_addrs[0].port());
+  ASSERT_EQ("127.0.0.1", bound_addrs[0].host());
+  ASSERT_EQ(9999, bound_addrs[0].port());
+}
+
 // Various tests for failed webserver startup cases.
 class WebserverNegativeTests : public KuduTest {
  protected:
@@ -277,6 +371,18 @@ TEST_F(WebserverNegativeTests, BadPasswordCommand) {
   ExpectFailedStartup([this](WebserverOptions* opts) {
       SetSslOptions(opts);
       opts->private_key_password_cmd = "/bin/false";
+    });
+}
+
+TEST_F(WebserverNegativeTests, BadAdvertisedAddresses) {
+  ExpectFailedStartup([this](WebserverOptions* opts) {
+      opts->webserver_advertised_addresses = ";;;;;";
+    });
+}
+
+TEST_F(WebserverNegativeTests, BadAdvertisedAddressesZeroPort) {
+  ExpectFailedStartup([this](WebserverOptions* opts) {
+      opts->webserver_advertised_addresses = "localhost:0";
     });
 }
 
